[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 337.618
margin_top = -258.483
margin_right = -342.382
margin_bottom = -170.483
rect_pivot_offset = Vector2( 62.3824, 63.928 )
custom_fonts/font = SubResource( 1 )
text = "GenePair"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -93.8699
margin_top = -366.477
margin_right = 86.1301
margin_bottom = -266.477
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="Credits" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.944
margin_top = -241.213
margin_right = 118.056
margin_bottom = -141.213
custom_fonts/font = SubResource( 2 )
text = "Credits"
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
